--- a/index_final.html
+++ b/index_final.html
@@ -696,6 +696,8 @@
                     Rapport</button>
                 <button class="action-btn" onclick="app.exportData()"><i class="fa-solid fa-download"></i>
                     Export</button>
+                <button class="action-btn" onclick="app.showLegal()" style="border-color:#444; color:#666"><i
+                        class="fa-solid fa-copyright"></i></button>
             </div>
         </header>
 
@@ -772,14 +774,32 @@ Ce modèle respecte le principe d'incertitude. Il ne vous dit pas *quand* vous f
 *Généré par l'IA AntiGravity - 2025*
         `;
 
+        const LICENSE_CONTENT = `
+COPYRIGHT (c) 2025 JÉRÔME LEY
+TOUS DROITS RÉSERVÉS
+
+1. PROPRIÉTÉ
+"Prime Radiant", son moteur (Schrodinger V3) et ses visuels sont la propriété exclusive de l'auteur.
+
+2. INTERDICTIONS
+Copie, modification et usage commercial interdits sans accord.
+
+3. RESPONSABILITÉ
+Logiciel de simulation probabiliste fourni "tel quel" sans garantie.
+`;
+
         const app = {
             mode: 1,
-            crisisMode: false,
-            vis: new RadiantVisualizerV5('mainChart'),
-            results: null,
+            // ... (rest of props)
 
-            init() {
-                // Generate Phantoms
+            // ... (rest of methods)
+
+            showLegal() {
+                document.getElementById('report-text').innerText = LICENSE_CONTENT;
+                this.showModal();
+            },
+
+            generateReport() {
                 const zone = document.getElementById('phantom-zones');
 
                 // Legend
