Update: Correct Author Name in License

--- a/index_final.html
+++ b/index_final.html
@@ -775,7 +775,7 @@ Ce modèle respecte le principe d'incertitude. Il ne vous dit pas *quand* vous f
         `;
 
         const LICENSE_CONTENT = `
-COPYRIGHT (c) 2025 JÉRÔME LEY
+COPYRIGHT (c) 2025 JÉRÔME LEYSSARD
 TOUS DROITS RÉSERVÉS
 
 1. PROPRIÉTÉ
