Fix L1 Mapping: Add missing data-id attributes (v8.1)

--- a/index.html
+++ b/index.html
@@ -405,42 +405,44 @@
                 <div class="control-row">
                     <div class="control-label">Santé Globale <span
                             style="font-size:0.6rem; opacity:0.5">1(Mal)..10(Bien)</span></div><input type="range"
-                        class="l1-in" id="l1-health" value="5" min="1" max="10" style="width:100%">
+                        class="l1-in" id="l1-health" data-id="health" value="5" min="1" max="10" style="width:100%">
                 </div>
                 <div class="control-row">
                     <div class="control-label">Stress Quotidien <span
                             style="font-size:0.6rem; opacity:0.5">1(Zen)..10(Crise)</span></div><input type="range"
-                        class="l1-in" id="l1-stress" value="5" min="1" max="10" style="width:100%">
+                        class="l1-in" id="l1-stress" data-id="stress" value="5" min="1" max="10" style="width:100%">
                 </div>
                 <div class="control-row">
                     <div class="control-label">Qualité Sommeil <span
                             style="font-size:0.6rem; opacity:0.5">1(Insomnie)..10(Réparateur)</span></div><input
-                        type="range" class="l1-in" id="l1-sleep" value="5" min="1" max="10" style="width:100%">
+                        type="range" class="l1-in" id="l1-sleep" data-id="sleep" value="5" min="1" max="10"
+                        style="width:100%">
                 </div>
                 <div class="control-row">
                     <div class="control-label">Alimentation <span
                             style="font-size:0.6rem; opacity:0.5">1(FastFood)..10(Sain)</span></div><input type="range"
-                        class="l1-in" id="l1-nutri" value="5" min="1" max="10" style="width:100%">
+                        class="l1-in" id="l1-nutri" data-id="food" value="5" min="1" max="10" style="width:100%">
                 </div>
                 <div class="control-row">
                     <div class="control-label">Activité Physique <span
                             style="font-size:0.6rem; opacity:0.5">1(Nul)..10(Athlète)</span></div><input type="range"
-                        class="l1-in" id="l1-sport" value="5" min="1" max="10" style="width:100%">
+                        class="l1-in" id="l1-sport" data-id="sport" value="5" min="1" max="10" style="width:100%">
                 </div>
                 <div class="control-row">
                     <div class="control-label">Vie Sociale <span
                             style="font-size:0.6rem; opacity:0.5">1(Isolé)..10(Entouré)</span></div><input type="range"
-                        class="l1-in" id="l1-soc" value="5" min="1" max="10" style="width:100%">
+                        class="l1-in" id="l1-soc" data-id="social" value="5" min="1" max="10" style="width:100%">
                 </div>
                 <div class="control-row">
                     <div class="control-label">Finances <span
                             style="font-size:0.6rem; opacity:0.5">1(Dettes)..10(Rente)</span></div><input type="range"
-                        class="l1-in" id="l1-fin" value="5" min="1" max="10" style="width:100%">
+                        class="l1-in" id="l1-fin" data-id="money" value="5" min="1" max="10" style="width:100%">
                 </div>
                 <div class="control-row">
                     <div class="control-label">Optimisme <span
                             style="font-size:0.6rem; opacity:0.5">1(Dépressif)..10(Joyeux)</span></div><input
-                        type="range" class="l1-in" id="l1-opt" value="5" min="1" max="10" style="width:100%">
+                        type="range" class="l1-in" id="l1-opt" data-id="opt" value="5" min="1" max="10"
+                        style="width:100%">
                 </div>
             </div>
 
