--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Prime Radiant | Final Architect Edition</title>
     <!-- PWA -->
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" href="logo.png">
     <meta name="theme-color" content="#00f2ff">
     <script>
         if ('serviceWorker' in navigator) navigator.serviceWorker.register('./sw.js').catch(console.error);
